--- a/package.json
+++ b/package.json
@@ -8,6 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.2",
+    "@fortawesome/free-solid-svg-icons": "^5.2.0",
+    "@fortawesome/vue-fontawesome": "^0.1.1",
+    "axios": "^0.18.0",
+    "gsap": "^2.0.1",
+    "i": "^0.3.6",
+    "npm": "^6.4.0",
+    "pug": "^2.0.3",
+    "pug-filters": "^3.1.0",
+    "pug-loader": "^2.4.0",
+    "pug-plain-loader": "^1.0.0",
+    "sass-resources-loader": "^1.3.3",
     "vue": "^2.5.17"
   },
   "devDependencies": {
